Try to fix single column on mobile

--- a/web/src/Cards/Card.css
+++ b/web/src/Cards/Card.css
@@ -1,5 +1,4 @@
 .card {
-    margin: 4px;
     padding: 4px;
     max-width: 156px;
     max-height: 192px;
